feat: 프로필별 yml 설정 및 도메인 허용